@@ -1,5 +1,10 @@
 2006-05-20	Benedikt Meurer <benny@xfce.org>
 
+	* terminal/main.c(main): Make warnings fatal if built with
+	  --enable-debug=full.
+
+2006-05-20	Benedikt Meurer <benny@xfce.org>
+
 	* terminal/terminal-dialogs.{c,h}, terminal/Makefile.am,
 	  terminal/terminal-preferences-dialog.c, terminal/terminal-screen.c,
 	  terminal/terminal-shortcut-editor.c, terminal/terminal-window.c:
